--- a/app/home/template.hbs
+++ b/app/home/template.hbs
@@ -1,3 +1,3 @@
-<h2 id="title">Nashville Free Park</h2>
-
+<h2 id="title">Nashville <i class="fa fa-car" aria-hidden="true"></i> Free Park</h2>
+<h4>The Definitive Guide for Sticking it to the Meter Police</h4>
 {{outlet}}
