error fix on homepage

--- a/app/home/template.hbs
+++ b/app/home/template.hbs
@@ -1,12 +1,12 @@
 <h2 id="title">Nashville <i class="fa fa-car" aria-hidden="true"></i> Free Park</h2>
 <h4>The Definitive Guide for Sticking it to the Meter Police</h4>
 
-{{#linkto "sign-up" }}
+{{#link-to "sign-up" }}
 <button>Sign Up</button>
-{{/linkto}}
+{{/link-to}}
 
-{{#linkto "login"}}
+{{#link-to "login"}}
 <button>Log In</button>
-{{/linkto}}
+{{/link-to}}
 
 {{outlet}}
