Fixed login issues with Ryan

--- a/app/login/template.hbs
+++ b/app/login/template.hbs
@@ -1,3 +1,4 @@
+<h2 class="form-header">Le Login si vous plait</h2>
 <form class="login-form" {{action login model on="submit"}}>
   {{input class="login-input" placeholder="Enter email..." value=model.email}}
   {{input type="password" class="login-input" placeholder="Enter password" value=model.password}}
