--- a/app/styles/_mapview.scss
+++ b/app/styles/_mapview.scss
@@ -5,3 +5,20 @@
   box-shadow: 0px 10px 15px black;
   margin: 2rem auto;
 }
+
+.route-container {
+  display: flex;
+}
+
+.sidebar {
+  width: 10%;
+}
+
+.form-container {
+  width: 60%;
+  margin: auto;
+}
+
+.main-content {
+  flex-grow: 1;
+}
