--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,3 +1,11 @@
+@import "base";
+@import "home";
+@import "login";
+@import "mapview";
+@import "signup";
+
+
+
 html {
   box-sizing: border-box;
 }
@@ -12,12 +20,8 @@ html {
 }
 
 body {
+  background-color: $brand-light-orange;
+  color: white;
   font-family: Questrial;
-}
-
-.leaflet-container {
-  width: 60%;
-  height: 60vh;
-  box-shadow: 0px 10px 15px black;
-  margin: auto;
+  margin: 0;
 }
