--- a/app/home/template.hbs
+++ b/app/home/template.hbs
@@ -1,12 +1,16 @@
-<h2 id="title">Nashville <i class="fa fa-car" aria-hidden="true"></i> Free Park</h2>
-<h4>The Definitive Guide for Sticking it to the Meter Police</h4>
+
+<div class="home">
+  <h2 class="home__title">Nashville</h2>
+  <i class="fa fa-car" aria-hidden="true"></i>
+  <h2 class="home__title">Free Park</h2>
+</div>
 
 {{#link-to "sign-up" }}
-<button>Sign Up</button>
+<button class="home__button signup">Sign Up</button>
 {{/link-to}}
 
 {{#link-to "login"}}
-<button>Log In</button>
+<button class="home__button login">Log In</button>
 {{/link-to}}
 
 {{outlet}}
