--- a/app/styles/_mapview.scss
+++ b/app/styles/_mapview.scss
@@ -1,7 +1,7 @@
 
 .leaflet-container {
   width: 60%;
-  height: 60vh;
+  height: 30rem;
   box-shadow: 0px 10px 15px black;
   margin: 2rem auto;
 }
@@ -21,4 +21,8 @@
 
 .main-content {
   flex-grow: 1;
+}
+
+.leaflet-popup-content {
+  color: black;
 }
