--- a/app/mapview/template.hbs
+++ b/app/mapview/template.hbs
@@ -1,27 +1,3 @@
-<div class="route-container">
-  <div class="sidebar">
-    <ul class="spot-list">
-      {{#each model as |spot|}}
-      <li class="spot-list__item">
-        Type: {{spot.type}}
-      </li>
-      <li class="spot-list__item">
-        Location: {{spot.location.lat}}, {{spot.location.lng}}
-      </li>
-      <li class="spot-list__item">
-        Lighting: {{spot.lighting}}
-      </li>
-      <li class="spot-list__item">
-        Popularity: {{spot.popularity}}
-      </li>
-      {{/each}}
-    </ul>
-    </div>
-
-{{/leaflet-map}}
-<button {{action geolocate on="click"}}>Log location</button>
-<div id="out"></div>
-<p>Yo</p>
 
 <div class="route-container">
   <div class="sidebar">
@@ -39,18 +15,23 @@
       <li class="spot-list__item">
         Popularity: {{spot.popularity}}
       </li>
+      <button {{action deleteRecord spot}}>X</button>
       {{/each}}
     </ul>
     </div>
 
   <div class="main-content">
     <div class="form-container">
+      <h2 class="form-container__title">Enter a new Parking Spot</h2>
       <form class="location-form" {{action geolocate address on="submit"}}>
         {{input value=address.street placeholder="street..."}}
         {{input value=address.city placeholder="city"}}
         {{input value=address.state placeholder="state (TN)"}}
         <button>Log location</button>
       </form>
+        {{input value=type placeholder="Type..."}}
+        {{input value=lighting placeholder="Lighting..."}}
+        {{input value=rating placeholder="Rating"}}
       <button {{action saveSpot}}>Save Location</button>
       <button {{action geoFindMe}}>Or Use your current location</button>
       <div id="out"></div>
@@ -59,6 +40,15 @@
     <div class="map-container">
       {{#leaflet-map lat=lat lng=lng zoom=zoom}}
       {{google-tile-layer type="ROADMAP" opacity=0.9}}
+
+      {{#each model as |spot|}}
+        {{#marker-layer location=spot.location}}
+          Type: {{spot.type}}<br>
+          Rating: {{spot.popularity}}<br>
+          Lighting: {{spot.lighting}}<br>
+
+        {{/marker-layer}}
+      {{/each}}
 
       {{#if geolocateran}}
       {{#marker-layer location=emberspot}}
