Home Page Style Complete

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -8,3 +8,4 @@ $width: 65rem;
 $brand-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);
 $brand-border-radius: 0.3rem;
 $brand-dark-border: 1px solid #505050;
+$haze: rgba(251,209,162, 0.7);
