--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -18,7 +18,9 @@ html {
 }
 
 body {
-  background-color: $brand-light-orange;
+  background: url('/IMG_1874.jpg');
+  background-size: auto;
+  background-position: 0 -1400px;
   color: white;
   font-family: Questrial;
   margin: 0;
