--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,1 +1,9 @@
+<div class="container">
+  <div class="home">
+    <h2 class="home__title">Nashville</h2>
+      <i class="fa fa-car" aria-hidden="true"></i>
+    <h2 class="home__title">Free Park</h2>
+  </div>
+
 {{outlet}}
+</div>
