--- a/app/styles/_mapview.scss
+++ b/app/styles/_mapview.scss
@@ -1,3 +1,24 @@
+.form-container__title {
+  display: flex;
+  justify-content: center;
+  width: 18rem;
+  color: $brand-green;
+  border: 2px solid $brand-green;
+}
+
+a {
+  text-decoration: none;
+
+}
+
+.logout {
+  display: flex;
+  justify-content: center;
+  width: 5rem;
+  border: solid 2px $brand-green;
+  font-family: sans-serif;
+  color: $brand-green;
+}
 
 .leaflet-container {
   width: 60%;
