--- a/app/styles/_home.scss
+++ b/app/styles/_home.scss
@@ -34,7 +34,7 @@
   width: 100%;
   padding: 2rem;
   border-radius: 10px;
-  background: $brand-green;
+  background: $brand-light-orange;
   color: $brand-blue;
   font-size: 2rem;
   box-shadow: 1px 1px 4px $brand-blue;
