--- a/app/sign-up/template.hbs
+++ b/app/sign-up/template.hbs
@@ -1,11 +1,13 @@
-<h2>this is the sign up page</h2>
+<div class="form-container">
+  <h2 class="form-container__title">this is the sign up page</h2>
 
-<form {{action registerUser model on="submit"}}>
-  <label>Email</label>
-  {{input class="sign-up-input" type="text" placeholder="email" value=model.email}}
-  <label>Password</label>
-  {{input class="sign-up-input" type="password" placeholder="password" value=model.password}}
-  <button>Submit</button>
-</form>
+  <form class="location-form"{{action registerUser model on="submit"}}>
+    <label>Email</label>
+    {{input class="sign-up-input" type="text" placeholder="email" value=model.email}}
+    <label>Password</label>
+    {{input class="sign-up-input" type="password" placeholder="password" value=model.password}}
+    <button class="mvbutton">Submit</button>
+  </form>
+</div>
 
 {{outlet}}
