--- a/app/styles/_mapview.scss
+++ b/app/styles/_mapview.scss
@@ -1,10 +1,39 @@
-.form-container__title {
+.form-container {
+  max-width: 40rem;
+  text-align: center;
   display: flex;
+  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  width: 18rem;
-  color: $brand-green;
-  border: 2px solid $brand-green;
+  background: $brand-green;
+  border-radius: 0.5rem;
+  margin: $gutter auto;
 }
+
+.form-container__title {
+  padding: 1rem 0;
+  margin: 0;
+  text-align: center;
+  line-height: 30px;
+  width: 100%;
+  color: $brand-blue;
+  border-bottom: 1px solid $brand-blue;
+}
+
+.location-form {
+  width: 100%;
+  padding: 10px 0;
+}
+
+.mvbutton {
+  margin-left: $gutter;
+  text-align: right;
+  border-radius: 2px;
+  background: $brand-blue;
+  color: white;
+  font-size: 1rem;
+  box-shadow: 1px 1px 1px $brand-orange;
+ }
 
 a {
   text-decoration: none;
@@ -17,14 +46,14 @@ a {
   width: 5rem;
   border: solid 2px $brand-green;
   font-family: sans-serif;
-  color: $brand-green;
+  color: $brand-blue;
 }
 
 .leaflet-container {
   width: 60%;
   height: 30rem;
   box-shadow: 0px 10px 15px black;
-  margin: 2rem auto;
+  margin: $gutter auto;
 }
 
 .route-container {
@@ -35,10 +64,7 @@ a {
   width: 10%;
 }
 
-.form-container {
-  width: 60%;
-  margin: auto;
-}
+
 
 .main-content {
   flex-grow: 1;
@@ -68,4 +94,10 @@ a {
   position: fixed;
   top: 31%;
   right: 29%;
+}
+
+input {
+  font-size: 1rem;
+  padding: 2px;
+  margin: 5px;
 }
