Final styling complete

--- a/app/application/template.hbs
+++ b/app/application/template.hbs
@@ -1,7 +1,9 @@
 <div class="container">
   <div class="home">
     <h2 class="home__title">Nashville</h2>
+      {{#link-to 'home'}}
       <i class="fa fa-car" aria-hidden="true"></i>
+      {{/link-to}}
     <h2 class="home__title">Free Park</h2>
   </div>
 
